--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.27.0",
+    "react-router-dom": "^6.28.0",
     "three": "^0.169.0",
     "three-bvh-csg": "^0.0.16"
   },
